Default decorator is supported, but not recommended.