@@ -15,17 +15,7 @@ JDK5 - JDK8:
 
 JDK9+:
 
-1) uptime,level,tags (default)
-     
-```
--Xlog:gc*:file=gc.log::filecount=4,filesize=50M
--or-
--Xlog:gc*:file=gc.log:uptime,level,tags:filecount=4,filesize=50M
-
-[0.052s][info][gc,start ] GC(0) Pause Young (Normal) (G1 Evacuation Pause)
-```
-
-2) uptime
+1) uptime
 
 ```
 -Xlog:gc*:file=gc.log:uptime:filecount=4,filesize=50M
@@ -33,7 +23,7 @@ JDK9+:
 [0.052s] GC(0) Pause Young (Normal) (G1 Evacuation Pause)
 ```
 
-3) uptimemillis
+2) uptimemillis
 
 ```
 -Xlog:gc*:file=gc.log:uptimemillis:filecount=4,filesize=50M
@@ -41,7 +31,7 @@ JDK9+:
 [052ms] GC(0) Pause Young (Normal) (G1 Evacuation Pause)
 ```
 
-4) time
+3) time
 
 ```
 -Xlog:gc*:file=gc.log:time:filecount=4,filesize=50M
@@ -49,7 +39,7 @@ JDK9+:
 [2020-02-14T15:21:55.207-0500] GC(0) Pause Young (Normal) (G1 Evacuation Pause)
 ```
 
-5) time,uptime
+4) time,uptime
 
 ```
 -Xlog:gc*:file=gc.log:time,uptime:filecount=4,filesize=50M
@@ -57,7 +47,7 @@ JDK9+:
 [2020-02-14T15:21:55.207-0500][0.052s] GC(0) Pause Young (Normal) (G1 Evacuation Pause)
 ```
 
-6) time,uptimemillis
+5) time,uptimemillis
 
 ```
 -Xlog:gc*:file=gc.log:time,uptimemillis:filecount=4,filesize=50M
